package baseNoStates;

public class DirectoryAreas {
  private Area rootArea;
  private arrayList<Door> allDoors;

  private void makeArea(){
    //TODO
  }
  public static Area getAreaById(String id){
    return root.findAreaById(id);
  }
  public ArrayList<Door> getDoorsGivingAccess(Area area){
    //TODO
  }
  public ArrayList<Space> getSpaces(Area area){
    //TODO
  }
}
